--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -75,10 +75,14 @@
     margin: auto;
 
 }
+.bs{
+    margin-left: 20px;
+}
 .imgLogo{
     width: 60px;
     height: 50px;
-    margin: 20% auto;
+    margin: 20px auto;
+
 }
 .a .b{
     display: flex;
