--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,3 +1,11 @@
+.header {
+    display: grid;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    grid-area: h;
+    grid-template-columns: 10% 70% 5% 5% 5% 5%;
+    grid-template-areas: "l e  s1 s2 s3 s4";
+  }
 .logo {
     grid-area: l;
 }
