--- a/src/components/content/item2.module.css
+++ b/src/components/content/item2.module.css
@@ -4,63 +4,11 @@
     background-attachment: fixed;
     background-size: 100% 100%;
 }
-
-.grids {
-    display: grid;
-    grid-template-columns: 22% 22% 22% 22%;
-    grid-template-areas: 'b a  c d';
-    margin-top: 2%;
-    margin-left: 8%;
-
-
-
-    
-}
-
-.itemGrid {
-    display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-areas: 'itemFirst' 'itemSecond';
-}
-
-.tourImg {
-    width: 100%;
-    height: 10vw;
-}
-
-.itemGrid1 {
-    grid-area: a;
-    margin-left: 2%;
-
-    background-color: rgba(240, 248, 255, 0.684);
+.titleHistory{
+    color: rgba(249, 249, 249, 0.675);
+    font-size: 35px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 5vw;
 
 }
 
-.itemGrid2 {
-    grid-area: b;
-    margin-left: 2%;
-
-    background-color: rgba(240, 248, 255, 0.684);
-
-
-
-}
-.itemGrid3 {
-    grid-area: c;
-    margin-left: 2%;
-    background-color: rgba(240, 248, 255, 0.684);
-
-}
-.itemGrid4 {
-    grid-area: d;
-    margin-left: 2%;
-    background-color: rgba(240, 248, 255, 0.684);
-}
-.itemFirst {
-    grid-area: itemFirst;
-}
-
-.itemSecond {
-grid-area: itemSecond;
-
-}
