--- a/src/components/content/item2.module.css
+++ b/src/components/content/item2.module.css
@@ -7,6 +7,7 @@
 .titleHistory{
     color: rgba(249, 249, 249, 0.675);
     font-size: 35px;
+    font-weight: 700;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 5vw;
 
